2009-04-06 texmanager.make_dvi now raises an error if LaTeX failed to
           create an output file. Thanks to Joao Luis Silva for reporting
           this. - JKS

2009-04-05 _png.read_png() reads 12 bit PNGs (patch from 
           Tobias Wood) - ADS

2009-04-04 Allow log axis scale to clip non-positive values to
           small positive value; this is useful for errorbars. - EF

2009-03-28 Make images handle nan in their array argument.
           A helper, cbook.safe_masked_invalid() was added. - EF

2009-03-25 Make contour and contourf handle nan in their Z argument. - EF

2009-03-20 Add AuxTransformBox in offsetbox.py to support some transformation.
           anchored_text.py example is enhanced and renamed
           (anchored_artists.py). - JJL

2009-03-20 Add "bar" connection style for annotation - JJL

2009-03-17 Fix bugs in edge color handling by contourf, found
           by Jae-Joon Lee. - EF

2009-03-14 Added 'LightSource' class to colors module for
           creating shaded relief maps.  shading_example.py
           added to illustrate usage. - JSW

2009-03-11 Ensure wx version >= 2.8; thanks to Sandro Tosi and
           Chris Barker. - EF

2009-03-10 Fix join style bug in pdf. - JKS

2009-03-07 Add pyplot access to figure number list - EF

2009-02-28 hashing of FontProperties accounts current rcParams - JJL

2009-02-28 Prevent double-rendering of shared axis in twinx, twiny - EF

2009-02-26 Add optional bbox_to_anchor argument for legend class - JJL

2009-02-26 Support image clipping in pdf backend. - JKS

2009-02-25 Improve tick location subset choice in FixedLocator. - EF

2009-02-24 Deprecate numerix, and strip out all but the numpy
           part of the code. - EF

2009-02-21 Improve scatter argument handling; add an early error
           message, allow inputs to have more than one dimension. - EF

2009-02-16 Move plot_directive.py to the installed source tree.  Add
           support for inline code content - MGD
