@@ -110,7 +110,20 @@ def fill(strings, linelen=75):
     result.append(' '.join(strings[lasti:]))
     return '\n'.join(result)
 
-_string_escape_regex = re.compile(r'([\\()])')
+# PDF strings are supposed to be able to include any eight-bit data,
+# except that unbalanced parens and backslashes must be escaped by a
+# backslash. However, sf bug #2708559 shows that the carriage return
+# character may get read as a newline; these characters correspond to
+# \gamma and \Omega in TeX's math font encoding. Escaping them fixes
+# the bug.
+_string_escape_regex = re.compile(r'([\\()\r\n])')
+def _string_escape(match):
+    m = match.group(0)
+    if m in r'\()': return '\\' + m
+    elif m == '\n': return r'\n'
+    elif m == '\r': return r'\r'
+    assert False
+
 def pdfRepr(obj):
     """Map Python objects to PDF syntax."""
 
@@ -136,7 +149,7 @@ def pdfRepr(obj):
     # simpler to escape them all. TODO: cut long strings into lines;
     # I believe there is some maximum line length in PDF.
     elif is_string_like(obj):
-        return '(' + _string_escape_regex.sub(r'\\\1', obj) + ')'
+        return '(' + _string_escape_regex.sub(_string_escape, obj) + ')'
 
     # Dictionaries. The keys must be PDF names, so if we find strings
     # there, we make Name objects from them. The values may be
